# TimeTracker

./: .gitignore  README.md  alembic.ini  installer.spec  logging_config.yaml  pyproject.toml  requirements.txt  runme.py
.github/workflows/: build_release.yml  linting.yml  manual_build.yml  release-drafter.yml
alembic/: env.py
alembic/versions/: 348acf3ce3c3_add_reason_column.py  813a2379f36d_add_project_column_to_time.py
data/: timedata.db
reports/: Andre_Wohnsland_07_2020.xlsx  Andre_Wohnsland_08_2020.xlsx
scripts/: compile_ui_to_python.ps1  insert_working_days.py  installer.sh  plotting.ipynb  timetracker.desktop
src/: button_controler.py  button_controller.py  config_handler.py  data_exporter.py  database_controler.py  database_controller.py  datastore.py  filepath.py  icons.py  models.py  plot_window.py  ui_config_window.py  ui_controler.py  ui_controller.py  ui_data_window.py  ui_datawindow.py  ui_mainwindow.py  ui_setup.py  ui_vacation_window.py  updater.py  utils.py
tests/: conftest.py  database_controller_test.py  store_test.py
ui/: __init__.py  config_window.py  config_window.ui  data_widget.py  data_widget.ui  data_window.py  data_window.ui  datawidget.py  datawidget.ui  mainwindow.py  mainwindow.ui  plot_window.py  plot_window.ui  vacation_window.py  vacation_window.ui
