[project]
name = "time-tracker"
version = "1.5.1"
description = "Track your time with Python and Qt"
authors = [{ name= "Andre Wohnsland" , email =  "50302161+AndreWohnsland@users.noreply.github.com"}]
readme = "README.md"
requires-python = ">=3.11,<3.12"

dependencies = [
    "gitpython>=3.1.45",
    "matplotlib>=3.10.7",
    "pandas>=2.3.3",
    "xlsxwriter>=3.2.9",
    "pyqtdarktheme>=2.1.0",
    "qtawesome>=1.4.0",
    "holidays>=0.82",
    "dataclasses-json>=0.6.7",
    "pyqt6>=6.4.2",
    "plyer>=2.1.0",
    "numpy>=2.3.3",
    "win11toast>=0.35; sys_platform == 'win32'",
    "seaborn>=0.13.2",
    "sqlalchemy>=2.0.44",
]

[dependency-groups]
dev = [
    "pyinstaller>=6.16.0",
    "jupyterlab>=4.4.9",
    "mypy>=1.18.2",
    "ruff>=0.14.0",
    "pyqt6-tools>=6.4.2.3.3",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
extend-safe-fixes = [
  "UP", # pyupgrade
  "D107", # Missing docstring in __init__
  "D205", # 1 blank line required between summary line and description
  "W291", # Trailing whitespace
]
per-file-ignores = { "runme.py" = ["E402"] }
select = [
  "A", # flake8-builtins
  "ANN", # Type annotations
  "C", # Convention
  "C4", # flake-comprehensions
  "D", # pydocstyle 
  "E", # pycodestyle
  "F", # Pyflakes
  "FAST", # FastAPI
  "I", # isort 
  "ICN001", # {name} should be imported as {asname},
  "PIE", # flake8-pie
  "PL", # pylint
  "PTH", # flake8-use-pathlib
  "PYI", # flake8-pyi
  "Q", # flake8-quotes
  "R", # Refactor
  "RET", # flake8-return
  "RUF", # Ruff
  "SIM", # flake8-simplify
  "UP", # pyupgrade
  "W", # Pylint (Warning)
]
ignore = [
  "D100", # Missing docstring in public module
  "D101", # Missing docstring in public class
  "D102", # Missing docstring in public method
  "D103",  # Missing docstring in public function
  "D104", # Missing docstring in public package
  "D105", # Missing docstring in magic method
  "D203", # 1 blank line required before class docstring
  "D213", # Multi-line docstring summary should start at the second line
  "ANN401", # Dynamically typed expressions (typing.Any) are disallowed
]

[tool.mypy]
disable_error_code = ["annotation-unchecked", "import-untyped"]

[tool.pylint]
disable = ["C0301", "C0114", "C0115", "C0116", "R0912"]
max-line-length = 120
extension-pkg-whitelist= ["PyQt5"]

[tool.autopep8]
max-line-length = 120
ignore = ["E402"]
